--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>y</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="author" content="">
+    <meta name="baidu-site-verification" content="RpmP52BAFy" />
+    <meta name="google-site-verification" content="dXIZL4NoooO0wxeCAdaX-z-G981VwZZIHTb4Ux0HjqY" />
+    <meta name="shenma-site-verification" content="ddb997fd8c432828be55cf03f9d941f3_1483169844"/>
+    <meta name="description" content="邓世龙的自留地，相信兼济天下则达，独善其身则穷, 主要记录一些生活，学习，投资过程中的一些感悟. 主要涉及跑步，骑行，羽毛球，港股投资，马拉松等等"/>
+    <meta name="keywords" content="跑步,骑行,马拉松,羽毛球,港股投资,游戏,Django,Sphinx-for-Chinese" />
   </head>
+
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <footer class="blog-footer">
+      <p>使用<a href="https://www.djangoproject.com">Django</a> by <a href="https://github.com/dengshilong">dengshilong</a>.模版采用<a href="http://v3.bootcss.com">Bootstrap</a></p>
+    </footer>
   </body>
 </html>
